@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11822 2013/01/07 21:54:02 wiz Exp $
+$NetBSD: TODO,v 1.11823 2013/01/08 12:39:27 wiz Exp $
 
 Suggested new packages
 ======================
@@ -408,7 +408,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o attica-0.4.1
 	o auctex-11.87
 	o audacious-plugins-2.4.4
-	o audacity-2.0
+	o audacity-2.0.2 [wip (audacity-devel)]
 	o autoconvert-0.3.16
 	o autogen-5.17.1
 	o automake-1.13.1
