@@ -1,4 +1,4 @@
-# $NetBSD: roundcube.conf,v 1.3 2008/05/04 16:34:03 adrianp Exp $
+# $NetBSD: roundcube.conf,v 1.4 2010/11/10 11:42:27 adam Exp $
 #
 # RoundCube configuration file fragment for Apache
 
@@ -6,21 +6,13 @@
     Alias /roundcube "@RCDIR@/"
 </IfModule>
 
+# Don't forget to adapt the configuration in @RCDIR@/.htaccess
+# to your liking.
 <Directory "@RCDIR@">
     Order allow,deny
     Allow from all
     AllowOverride All
     DirectoryIndex index.php
-    <IfModule mod_php4.c>
-	php_flag file_uploads On
-	php_value session.auto_start Off
-	php_value upload_max_filesize 2M
-    </IfModule>
-    <IfModule mod_php5.c>
-	php_flag file_uploads On
-	php_value session.auto_start Off
-	php_value upload_max_filesize 2M
-    </IfModule>
 </Directory>
 
 #
