@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2013/01/06 16:02:21 pettai Exp $
+# $NetBSD: Makefile,v 1.16 2013/01/07 19:33:22 pettai Exp $
 #
 
 DISTNAME=	pcsc-lite-1.8.7
-PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	http://alioth.debian.org/frs/download.php/3842/
 EXTRACT_SUFX=	.tar.bz2
