@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.78 2012/10/03 21:57:35 wiz Exp $
+# $NetBSD: Makefile,v 1.79 2012/10/23 18:17:00 asau Exp $
 
-DISTNAME=		stunnel-4.53
+DISTNAME=		stunnel-4.54
 PKGREVISION=		1
 CATEGORIES=		security
 MASTER_SITES=		ftp://ftp.stunnel.org/stunnel/
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
+MAINTAINER=		jym@NetBSD.org
 HOMEPAGE=		http://www.stunnel.org/
 COMMENT=		Universal SSL tunnel
 LICENSE=		gnu-gpl-v2
@@ -15,8 +15,6 @@ USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--localstatedir=${VARBASE}
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
-CONFIGURE_ARGS+=	--with-cert-dir=${SSLCERTS:Q}
-CONFIGURE_ARGS+=	--with-pem-dir=${SSLCERTS:Q}
 CONFIGURE_ARGS+=	--with-ssl=${SSLBASE:Q}
 
 .include "../../mk/bsd.prefs.mk"
@@ -29,11 +27,12 @@ PKG_GROUPS=		${STUNNEL_GROUP}
 USER_GROUP=		${STUNNEL_USER} ${STUNNEL_GROUP}
 
 PKG_SYSCONFSUBDIR=	stunnel
-PKG_SYSCONFDIR_PERMS=	${USER_GROUP} 0700
+PKG_SYSCONFDIR_PERMS=	${ROOT_USER} ${STUNNEL_GROUP} 0750
 
-OWN_DIRS_PERMS=		${PKG_HOME} ${USER_GROUP} 0700
-CONF_FILES_PERMS+=	${PREFIX}/share/examples/stunnel/stunnel.conf-sample \
-			    ${PKG_SYSCONFDIR}/stunnel.conf ${USER_GROUP} 0644
+OWN_DIRS=		${PKG_HOME}/certs ${PKG_HOME}/crls
+OWN_DIRS_PERMS=		${PKG_HOME}/pid ${USER_GROUP} 0750
+CONF_FILES+=		${PREFIX}/share/examples/stunnel/stunnel.conf-sample \
+			    ${PKG_SYSCONFDIR}/stunnel.conf
 
 RCD_SCRIPTS=		stunnel
 
@@ -47,11 +46,12 @@ SUBST_FILES.chroot=	tools/stunnel.conf-sample.in
 SUBST_SED.chroot+=	-e 's|@prefix@/var/lib|@localstatedir@/chroot|'
 
 SUBST_CLASSES+=		stunnel
-SUBST_MESSAGE.stunnel=	Fix user and group
+SUBST_MESSAGE.stunnel=	Fix user, group and pid
 SUBST_STAGE.stunnel=	post-configure
 SUBST_FILES.stunnel=	tools/stunnel.conf-sample
 SUBST_SED.stunnel=	-e 's|setuid = nobody|setuid = ${STUNNEL_USER}|'
 SUBST_SED.stunnel+=	-e 's|setgid = nogroup|setgid = ${STUNNEL_GROUP}|'
+SUBST_SED.stunnel+=	-e 's|pid = /stunnel.pid|pid = /pid/stunnel.pid|'
 
 .include "options.mk"
 
