@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.34 2011/12/08 19:37:57 jym Exp $
+$NetBSD: distinfo,v 1.35 2012/04/16 16:55:21 ryoon Exp $
 
-SHA1 (stunnel-4.53.tar.gz) = c167833c23fde388db697bd3edb4444aff0e449e
-RMD160 (stunnel-4.53.tar.gz) = 4c3fe3c7ca3d65e6f9ad21e330a48beb291d9e4b
-Size (stunnel-4.53.tar.gz) = 529720 bytes
+SHA1 (stunnel-4.54.tar.gz) = e9e6414c699e81b0bd029f5b6ae018bb5e320bbd
+RMD160 (stunnel-4.54.tar.gz) = c6889fda88f9987ba7a96476d29e7072668fa46d
+Size (stunnel-4.54.tar.gz) = 535202 bytes
 SHA1 (patch-aa) = 0e57d4fa383dad7891795073d1f6b5075715b346
 SHA1 (patch-ac) = 43521a88606981bc55dd94043d52b1a16f08e583
